[tool.poetry]
name = "gdbundle-gdb-callgrind"
version = "0.1"
description = ""
authors = ["Josh Pieper <jjp@pobox.com>"]
readme = "README.md"
include = ["gdbundle_gdb_callgrind/scripts/*"]
license = "Apache 2.0"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "*"
gdbundle = "~0.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
